# Persona-Engine

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  GENOME_CHARTER.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  prompt.txt  pyproject.toml  requirements.txt
.trae/documents/: Phase 10 核心交付项评估报告.md  Phase 9 重构：流体人格 (Fluid Persona).md
dashboard/: index.html  main.js  package-lock.json  style.css
docs/: DIAGRAMS.md  ETHICS.md  FUTURE_EVOLUTION.md  GOVERNANCE_CHARTER.md  HOW_TO_USE.md  README_CN.md  REPORTS.md
docs/plans/: phase_11_final_spec.md  phase_11_plan.md  phase_11_plan_variant_b.md  phase_12_5_memory_charter.md  phase_12_spec.md
docs/reports/: architecture_brief.md  full_lifecycle_v1_report.md  phase_0_report.md  phase_10_report.md  phase_11_report.md  phase_12_report.md  phase_1_report.md  phase_2_report.md  phase_3_report.md  phase_4_report.md  phase_5_report.md  phase_6_report.md  phase_7_report.md  phase_8_report.md  phase_9_report.md
docs/zh/: architecture_cn.md  (+8 more)
examples/: bridge_ollama.py  bridge_openai.py
gecce_kernel_pkg/: README.md
src/: app_integration.py  background_test_suite.py  chat_with_persona.py  config.py  kernel_integration.py  main_demo.py  main_kernel_demo.py  persona_cli.py  test_phase_7.py  test_phase_8.py
tests/: background_test_suite.py  persona_stress_test.py  print_readme_prompt.py  test_constitution_invariants.py  test_director_equivalence.py  test_genome_drift.py  test_phase_10.py  test_phase_10_full.py  test_phase_6_recombination.py  test_phase_7.py  test_phase_8.py  test_phase_9.py  test_phase_9_autoswitch.py
(+42 files in other folders)
