[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "persona-engine"
version = "1.0.0"
description = "A product-grade cognitive substrate and context compiler."
dependencies = [
    "numpy",
    "scipy"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "gecce_kernel_pkg*"]
